Adicionado svgs + index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores iure magni fugit cupiditate esse molestiae eaque dicta! Culpa, sit magni iure, necessitatibus, hic quisquam dolorum nam quibusdam quis sequi fugit.
     </p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, eius tenetur! Reprehenderit expedita corrupti mollitia animi magni culpa, fugit itaque hic earum. Quasi modi assumenda dolor maxime tenetur debitis aperiam.</p>
+    <img src="assets/svgs/icon-user.svg" alt="">
 </body>
 </html>
